fix hover on mobile - deleted

--- a/css/project.css
+++ b/css/project.css
@@ -265,21 +265,23 @@ header .logo {
   text-shadow: 1px 0px 0px var(--clr-primary-default);
 }
 
-.primary-nav li::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: -1px;
-  height: 3px;
-  background-color: var(--clr-primary-default);
-  border-radius: 3px;
-  transform: scaleX(0);
-  transition: transform 0.3s;
-}
+@media (min-width: 501px) {
+  .primary-nav li::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -1px;
+    height: 3px;
+    background-color: var(--clr-primary-default);
+    border-radius: 3px;
+    transform: scaleX(0);
+    transition: transform 0.3s;
+  }
 
-.primary-nav li:hover::before {
-  transform: scaleX(1);
+  .primary-nav li:hover::before {
+    transform: scaleX(1);
+  }
 }
 
 .mobile-nav-toggle {
